$Id: History,v 1.35 2001-09-28 15:38:13 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
28 sep 01: mma (stand-V03-02-07)
- StorePhysicsTable(): ParticleName included in fileName.
  Completion of Store/Retrieve functions 
     
21 sep 01: mma (stand-V03-02-06)
- DoIt: fminimalEnergy = 1*eV in phot,comp,conv,anni     
     
19 sep 01: mma (stand-V03-02-05)
- come back to the previous ProcessNames
     
17 sep 01: mma (stand-V03-02-04)
- modifs in almost all classes for the migration of Materials to pure STL,
  but backward compatible with g4rw   

13 sep 01: L/Urban (stand-V03-02-03)
-G4VxEnergyLoss: min.delta cut is set as rcut/100 + some optimisation
    
11 sep 01: L.Urban (stand-V03-02-02)
- G4VhEnergyLoss+G4VeEnergyLoss: bugfix in subcutoff delta generation
     
29 aug 01: mma (stand-V03-02-01)
- G4hIonisation::PostStepDoIt grecj term for spin 1/2 (not 1)
     
13 aug 01: mma
- G4eIonisation: new function ComputeRestrictedMeandEdx()
- G4hIonisation: new function ComputeRestrictedMeandEdx() + 'cleanup'
    
10 aug 01: mma
- store/retrieve PhysicsTables implemented in photelec, compton, gamaconv,
  annihil, eIonisa, eBrems, mulscat, hIonisa      
     
17 jul 01: mma (stand-V03-02-00)