@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4ComptonScattering.cc,v 1.13 2001-09-28 15:38:14 maire Exp $
+// $Id: G4ComptonScattering.cc,v 1.14 2001-10-01 15:00:29 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -45,7 +45,8 @@
 // 03-08-01, new methods Store/Retrieve PhysicsTable (mma)
 // 06-08-01, BuildThePhysicsTable() called from constructor (mma)
 // 17-09-01, migration of Materials to pure STL (mma)
-// 20-09-01, DoIt: fminimalEnergy = 1*eV (mma)  
+// 20-09-01, DoIt: fminimalEnergy = 1*eV (mma)
+// 01-10-01, come back to BuildPhysicsTable(const G4ParticleDefinition&)     
 // -----------------------------------------------------------------------------
 
 #include "G4ComptonScattering.hh"
@@ -63,9 +64,7 @@ G4ComptonScattering::G4ComptonScattering(const G4String& processName)
     HighestEnergyLimit(100*GeV),
     NumbBinTable(100),
     fminimalEnergy(1*eV)
-{
- BuildThePhysicsTable();
-}
+{}
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
  
@@ -94,7 +93,7 @@ void G4ComptonScattering::SetPhysicsTableBining(
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
  
-void G4ComptonScattering::BuildThePhysicsTable()
+void G4ComptonScattering::BuildPhysicsTable(const G4ParticleDefinition&)
 // Build cross section and mean free path tables
 {
    G4double LowEdgeEnergy, Value;
