@@ -1,4 +1,4 @@
-$Id: History,v 1.35 2001-09-28 15:38:13 maire Exp $
+$Id: History,v 1.36 2001-10-01 15:00:27 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,6 +17,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
      
+01 oct 01: mma (stand-V03-02-08)
+- Phot,Comp,Conv,Annil: come back to BuildPhysicsTable(particleDefinition)
+  invoked from the process manager
+       
 28 sep 01: mma (stand-V03-02-07)
 - StorePhysicsTable(): ParticleName included in fileName.
   Completion of Store/Retrieve functions 
